--- a/travelpage.html
+++ b/travelpage.html
@@ -8,6 +8,7 @@
             <h1>Thank You for Booking</h1>
                 <p>Your travel booking has been successfully completed!</p>
                 <p>We look forward to serving you on your upcoming journey.</p>
+                <h3>Your journey begins here!</h3>
             
                 <a href="Registrationform.html">Return to Homepage</a>
             </div>
